--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "npx jetify"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.1",
     "expo": "~40.0.0",
+    "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-popup-menu": "^0.15.10",
+    "react-native-push-notification": "^7.2.3",
+    "react-native-storage": "^1.0.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "jetifier": "^1.6.6"
   },
   "private": true
 }
